--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
         </section>
     </main>
     <footer>
-        
+        <address>
+            Written by <a href="mailto:jamirleal200@gmail.com">Jamir Leal</a>.<br>
+            Visit this page at: <br>
+            Monterrey, N.L. Mexico
+            </address> 
     </footer>
 </body>
 </html> 
