--- a/lab_1/index.html
+++ b/lab_1/index.html
@@ -76,7 +76,7 @@
     <footer>
         <address>
             Written by <a href="mailto:jamirleal200@gmail.com">Jamir Leal</a>.<br>
-            Visit this page at: <br>
+            Visit this page at: <a>https://jamirleal.github.io/webdev_class/</a><br>
             Monterrey, N.L. Mexico
         </address> 
         <img src="./src/TecMonterrey_Horizontal_RGB.jpg" alt="Girl in a jacket" width="500" height="600"> 
