--- a/lab_1/index.html
+++ b/lab_1/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <nav>
+    </nav> 
 <head>
     <title>Jamir's Resume</title>
 </head>
@@ -72,6 +74,33 @@
                     Development was using nodes and topics; and custom messages interfaces based on the ros2 foxy library.</li>
             </ul>
         </section>
+        <section>
+            <div style="display: flex;">
+                <div style="float: left; width: 50%;">
+                    <h3><u>Skills:</u></h3>
+                    <ul>
+                        <li>C++, Arduino (3 years)</li>
+                        <li>Python, Linux (2 years)</li>
+                        <li>HTML5, CSS3, JavaScript (2 years) </li>
+                        <li>React.js library (2 years)Git, GitHub, Phabricator</li>
+                        <li>Easy EDA PCB design (2 years)</li>
+                        <li>SQL, Java (1 year)</li>
+                        <li>Git, GitHub, Phabricator</li>
+                    </ul>
+                </div>
+                <div style="float: left; width: 50%;">
+                    <h3><u>Coding contests:</u></h3>
+                    <ul>
+                        <li>Google Kickstart</li>
+                        <li>Google Kickstart</li>
+                        <li>Top Tec Programmer - National school
+                            competitive programming contest.
+                            Achieved 8 th and 5 th places in 2020, 2021
+                            respectively</li>
+                    </ul>
+                </div>
+              </div> 
+        </section>
     </main>
     <footer>
         <address>
@@ -79,7 +108,7 @@
             Visit this page at: <a>https://jamirleal.github.io/webdev_class/</a><br>
             Monterrey, N.L. Mexico
         </address> 
-        <img src="./src/TecMonterrey_Horizontal_RGB.jpg" alt="Girl in a jacket" width="500" height="600"> 
+        <img src="./src/TecMonterrey_Horizontal_RGB.jpg" alt="TecMonterrey" width="100" height="200"> 
     </footer>
 </body>
 </html> 
