--- a/lab_1/index.html
+++ b/lab_1/index.html
@@ -103,12 +103,18 @@
         </section>
     </main>
     <footer>
-        <address>
-            Written by <a href="mailto:jamirleal200@gmail.com">Jamir Leal</a>.<br>
-            Visit this page at: <a>https://jamirleal.github.io/webdev_class/</a><br>
-            Monterrey, N.L. Mexico
-        </address> 
-        <img src="./src/TecMonterrey_Horizontal_RGB.jpg" alt="TecMonterrey" width="100" height="200"> 
+        <div style="display: flex;">
+            <div style="float: left; width: 50%;">
+                <address>
+                    Written by <a href="mailto:jamirleal200@gmail.com">Jamir Leal</a>.<br>
+                    Visit this page at: <a>https://jamirleal.github.io/webdev_class/</a><br>
+                    Monterrey, N.L. Mexico
+                </address> 
+            </div>
+            <div style="float: left; width: 50%;">
+                <img src="./src/TecMonterrey_Horizontal_RGB.jpg" alt="TecMonterrey" width="400" height="40">
+            </div>
+        </div>
     </footer>
 </body>
 </html> 
