--- a/lab_2/index.html
+++ b/lab_2/index.html
@@ -112,7 +112,7 @@
                 </address> 
             </div>
             <div style="float: left; width: 50%;">
-                <img src="./src/TecMonterrey_Horizontal_RGB.jpg" alt="TecMonterrey" width="400" height="40">
+                <img src="./../src/TecMonterrey_Horizontal_RGB.jpg" alt="TecMonterrey" width="400" height="40">
             </div>
         </div>
     </footer>
