--- a/lab_1/index.html
+++ b/lab_1/index.html
@@ -3,6 +3,7 @@
     <nav>
     </nav> 
 <head>
+    <link rel="stylesheet" href="styles.css">
     <title>Jamir's Resume</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
         </section>
     </header>
     <main>
-        <section>
+        <section class='education-section'>
             <h3><u>Education:</u></h3>
             <p style="text-align: end;">
                 ITESM Campus Monterrey (August 2018 – Present)</br>
