--- a/lab_2/index.html
+++ b/lab_2/index.html
@@ -3,12 +3,13 @@
     <nav>
     </nav> 
 <head>
+    <link rel="stylesheet" href="styles.css">
     <title>Jamir's Resume</title>
 </head>
 <body>
-    <header>
-        <h1 style='text-align: center;'><b>Jamir Leal Cota</b></h1>
-        <section style='text-align: center;'>
+    <header class="header-section">
+        <h1 class="name-text"><b>Jamir Leal Cota</b></h1>
+        <section>
             Mobile: +52 612 144 0520</br>
             GitHub: <a><u>https://github.com/JamirLeal</u></a></br>
             Email: <a><u>jamirleal200@gmail.com</u></a></br>
