--- a/lab_2/index.html
+++ b/lab_2/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="styles.css">
     <title>Jamir's Resume</title>
 </head>
-<body>
+<body class='body-container'>
     <header class="header-section">
         <h1 class="name-text"><b>Jamir Leal Cota</b></h1>
         <section>
-            Mobile: +52 612 144 0520</br>
+            Mobile: <u>+52 612 144 0520</u></br>
             GitHub: <a><u>https://github.com/JamirLeal</u></a></br>
             Email: <a><u>jamirleal200@gmail.com</u></a></br>
             LinkedIn: <a><u>https://www.linkedin.com/in/JamirLeal</u></a></p>
@@ -19,7 +19,7 @@
     <main>
         <section>
             <h3><u>Education:</u></h3>
-            <p style="text-align: end;">
+            <p class='education-text'>
                 ITESM Campus Monterrey (August 2018 – Present)</br>
                 B.S. Information Technologies</br>
                 Expected Graduation: June 2023</br>
@@ -28,13 +28,13 @@
         <section>
             <h3><u>Work experience:</u></h3>
             <p>Campus Intern - Tecnológico de Monterrey (February 2021 – June 2021):</p>
-            <ul style="text-align: justify;">
+            <ul class='content-text'>
                 <li>Intern at campus. Participated doing research about Amazon’s DeepRacer project (race), designing and testing
                     reward functions in the AWS console and applying the reinforcement learning models to a real-world vehicle.</li>
                 <li>Hyperparameters tuning during the testing of the reward models to optimize the time to converge of them.</li>
             </ul>
             <p>Software Engineering Intern – Uber Routing Engine Team (June 2021 – August 2021):</p>
-            <ul style="text-align: justify;">
+            <ul class='content-text'>
                 <li>Developing an algorithm to handle rerouting to a specific route. Working with high scale data structures and algorithms in
                     Java, unit testing using JUnit and Phabricator for collaboration.</li>
             </ul>
@@ -42,7 +42,7 @@
         <section>
             <h3><u>Projects:</u></h3>
             <p>National Robotics 2019 Open Tournament (December 2018 – March 2019):</p>
-            <ul style="text-align: justify;">
+            <ul class='content-text'>
                 <li>1st place achieved in Rescue Maze Category.</li>
                 <li>
                     Programmed the robot’s vision algorithm using MicroPython and OpenCV like library with template matching feature
@@ -53,31 +53,31 @@
                 </li>
             </ul>
             <p>RoboCup Junior Australia 2019 International (March 2019 – July 2019):</p>
-            <ul style="text-align: justify;">
+            <ul class='content-text'>
                 <li>Robot’s electronic systems development, including PCB design and assembly using Easy EDA tool.</li>
                 <li>Programmed robot’s computer vision algorithm using MicroPython to recognize letters. Algorithm used blob
                     detections, line, and circles finder. Worked with multiple image filters. Programmed UART communication protocol
                     between microcontrollers.</li>
             </ul>
             <p>RoBorregos Warehouse project (Apr 2020 – December 2020):</p>
-            <ul style="text-align: justify;">
+            <ul class='content-text'>
                 <li>Developed a web app for managing a component warehouse using react library. Worked in frontend using the backend
                     API with a successful production deployment.</li>
             </ul>
             <p>RoBorregos Webpage project (Aug 2020 - Currently):</p>
-            <ul style="text-align: justify;">
+            <ul class='content-text'>
                 <li>Developed on management and features of a webpage using react.js as framework. Worked using eslint as linter and
                     jest for testing framework. Development was using Hooks.</li>
             </ul>
             <p>LARC Very Small Size Soccer (February 2020 – Currently):</p>
-            <ul style="text-align: justify;">
+            <ul class='content-text'>
                 <li>Integrated five different development areas using Robot Operating System (ROS2) framework on a Linux environment.
                     Development was using nodes and topics; and custom messages interfaces based on the ros2 foxy library.</li>
             </ul>
         </section>
         <section>
-            <div style="display: flex;">
-                <div style="float: left; width: 50%;">
+            <div class="row">
+                <div class="col-6">
                     <h3><u>Skills:</u></h3>
                     <ul>
                         <li>C++, Arduino (3 years)</li>
@@ -89,7 +89,7 @@
                         <li>Git, GitHub, Phabricator</li>
                     </ul>
                 </div>
-                <div style="float: left; width: 50%;">
+                <div class="col-6">
                     <h3><u>Coding contests:</u></h3>
                     <ul>
                         <li>Google Kickstart</li>
@@ -104,16 +104,16 @@
         </section>
     </main>
     <footer>
-        <div style="display: flex;">
-            <div style="float: left; width: 50%;">
+        <div class="row footer-content">
+            <div class='col-6'>
                 <address>
                     Written by <a href="mailto:jamirleal200@gmail.com">Jamir Leal</a>.<br>
-                    Visit this page at: <a>https://jamirleal.github.io/webdev_class/</a><br>
+                    Visit this page at: <a href="https://jamirleal.github.io/webdev_class/lab_2/index.html">https://jamirleal.github.io/webdev_class/lab_2/index.html</a><br>
                     Monterrey, N.L. Mexico
                 </address> 
             </div>
-            <div style="float: left; width: 50%;">
-                <img src="./../src/TecMonterrey_Horizontal_RGB.jpg" alt="TecMonterrey" width="400" height="40">
+            <div class='col-6'>
+                <img src="./../src/TecMonterrey_Horizontal_RGB.jpg" alt="TecMonterrey" class="tec-img">
             </div>
         </div>
     </footer>
