--- a/lab_3/index.html
+++ b/lab_3/index.html
@@ -10,9 +10,9 @@
 	<link rel="stylesheet" href="./css/index.css" />
 </head>
 <body>
-  <header>
+  <header class="header">
 		<div class="logo"><img src="https://uploads.codesandbox.io/uploads/user/6eb75550-4d51-47fd-8ec1-d216b5da5e5c/M4sq-logo.jpeg"/></div>
-		<h1>The ABC Company</h1>
+		<h1 class='comp-title'>The ABC Company</h1>
 	</header>
 	<nav class="navbar">
 		<div class="hamburger">&#9776;</div>
