--- a/lab_5/index.html
+++ b/lab_5/index.html
@@ -26,7 +26,7 @@
               <div class="panel-body">
                 <form class="todoForm">
                   <fieldset>
-                    <textarea class="newTodo form-control"></textarea>
+                    <textarea class="newTodo form-control" placeholder="Write your todo here."></textarea>
                     <button type="submit" class="submitButton"> 
                       Post Todo
                     </button>
